--- a/css/main.css
+++ b/css/main.css
@@ -68,6 +68,7 @@ html, body {
 body {
   font-family:'PT Sans', sans-serif;
   color:#333;
+  background-size:cover;
 }
 
 .main {
@@ -90,9 +91,17 @@ h2 {
 button {
   font-family:inherit;
   background:transparent;
-  border:2px solid #666;
-  color:#666;
+  /*border:2px solid #333;*/
+  border:none;
+  border-radius:4px;
+  background-color:#00638E;
+  padding:0.5rem;
+  color:#fff;
   outline:0;
+}
+
+button:hover {
+  background-color:#00567B;
 }
 
 .idea {
