--- a/css/main.css
+++ b/css/main.css
@@ -147,6 +147,7 @@ button:hover {
 @media only screen and (max-width: 25em) {
   .main {
     position:static;
+    -webkit-transform:none;
     transform:none;
     padding:1rem;
     margin:0 auto;
