--- a/css/main.css
+++ b/css/main.css
@@ -68,15 +68,29 @@ html, body {
 body {
   font-family:'PT Sans', sans-serif;
   color:#333;
-  background-size:cover;
+  overflow:hidden;
 }
 
+/*CENTERING*/
+
+body {
+  text-align: center;
+}
+
+/* The ghost, nudged to maintain perfect centering */
+body:before {
+  content: '';
+  display: inline-block;
+  height: 100%;
+  vertical-align: middle;
+  margin-right: -0.25em; /* Adjusts for spacing */
+}
+
+/* The element to be centered, can
+also be of any width and height */
 .main {
-  position:absolute;
-  top:50%;
-  left:50%;
-  -webkit-transform:translate(-50%,-50%);
-  transform:translate(-50%,-50%);
+  display: inline-block;
+  vertical-align: middle;
   text-align:center;
 }
 
@@ -110,7 +124,6 @@ button:hover {
   box-shadow: 2px 2px 20px 4px rgba(0,0,0,0.2);
   margin:1rem auto;
   padding:1rem;
-  max-width:400px;
 }
 
 .index {
@@ -144,13 +157,17 @@ button:hover {
    Media Queries
    ========================================================================== */
 
-@media only screen and (max-width: 25em) {
+@media only screen and (max-width: 20em) {
+
+  /*De-center*/
+
+  body:before {
+    display:none;
+  }
+
   .main {
-    position:static;
-    -webkit-transform:none;
-    transform:none;
+    vertical-align:inherit;
     padding:1rem;
-    margin:0 auto;
   }
 }
 
