--- a/css/main.css
+++ b/css/main.css
@@ -108,14 +108,14 @@ button {
   /*border:2px solid #333;*/
   border:none;
   border-radius:4px;
-  background-color:#00638E;
+  background-color:#F24D85;
   padding:0.5rem;
   color:#fff;
   outline:0;
 }
 
 button:hover {
-  background-color:#00567B;
+  background-color:#db3d72;
 }
 
 .idea {
